--- a/css_style.css
+++ b/css_style.css
@@ -1,1 +1,158 @@
 
+* {
+  box-sizing: border-box;
+  font-family: 'Libre Baskerville', serif;
+  margin: 0;
+  background-color: #FFC680;
+}
+
+#container {
+  border-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
+}
+
+.box {
+    border: 2px solid black;
+  background-color: #80FFC6
+}
+
+p {
+   background-color: #80FFC6;
+}
+#beef {
+  background-color: #FF6666;
+}
+#chicken {
+   background-color: yellow;
+}
+#sushi {
+  background-color: #FF6694;
+}
+
+/* Desktop Media Query */
+/* for justify-content to work, there has to be space left in the container */
+@media (min-width: 992px) {
+  h1 {
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+  }
+  #container {
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    top: 25%;
+  }
+  .box {
+    position: relative;
+    width: 25%;
+    height: 240px;
+    margin: 1rem;
+    flex-grow: 1;
+    overflow: hidden;
+  }
+  /*absolute position top: 0, right: 0 will place the element on the top right corner of the parent elem. For that to happen, the .box div needs to 
+  be in a relative position. Otherwise, the child elem will position itself on the parent element body or HTML*/
+  .main-item {
+    width: 25%;
+    height: 35px;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    padding-top: 3px;
+    margin-top: -3px;
+    margin-bottom: -4px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+  }
+  p {
+    position: absolute;
+    top: 24px;
+    padding: 1em;
+  }
+}
+ 
+/*Tablet Media Query */
+@media (min-width: 768px) and (max-width: 991px) {
+  h1 {
+    margin-top: 100px;
+  }
+  #container {
+    padding: 1rem;
+    display: flex;
+  }
+   .box {
+     position: relative;
+     height: 150px;
+     width: 25%;
+     padding: 1rem;
+     overflow: hidden; /*overlapping text */
+     margin: 1rem;
+     flex-grow: 1;
+  }
+  #p3 {
+    width: 93.5%;
+    height: 150px;
+    padding: 1rem;
+    position: absolute;
+    top: 305px;
+    margin: 3rem 0 0 1rem;
+  }
+  .main-item {
+    width: 25%;
+    height: 25px;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    padding-top: 3px;
+    margin-bottom: -4px;
+    background-color: yellow;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+  }
+  
+  P {
+    position: absolute;
+    top: 30px;
+  }
+}
+
+/*Mobiel Media Query */ 
+@media (max-width: 767px) {
+  h1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  #container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .box{
+    position: relative;
+    max-width: 80%;
+    margin: 0 auto;
+    margin-bottom: 1.5rem;
+  }
+   .main-item {
+    width: 25%;
+    height: 25px;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    padding-top: 3px;
+    margin-bottom: -4px;
+    background-color: yellow;
+    position: absolute;
+    top: 0;
+    right: 0;  
+  }
+  P {
+    margin-top: 30px;
+  }
+}
